--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,4 +2,8 @@ body{
 	background: url("../images/suhome.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
+	font-family: 'Chewy', cursive;
+	text-align: right;
+	margin-right: 10px;
+	font-size: 20px;
 }
