--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,3 +7,19 @@ body{
 	margin-right: 10px;
 	font-size: 20px;
 }
+.intro{
+	width:500px;
+	border: .5px solid yellow;
+	padding: 10px;
+	margin: 30px;
+	float: right;
+}
+button{
+	width:75px;
+	height:75px;
+	cursor: pointer;
+}
+.buttons{
+	margin-top: 475px;
+	margin-right: 30px;
+}
