--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body{
 	padding: 10px;
 	margin: 30px;
 	float: right;
+	background-color: yellow;
 }
 button{
 	width:75px;
@@ -20,7 +21,7 @@ button{
 	cursor: pointer;
 	margin-top: 20px;
 }
-#amethyst{
+#first-button{
 	margin-top: 20px;
 }
 #win-loss-tracker{
@@ -30,6 +31,7 @@ button{
 	text-align: left;
 	margin-left: 425px;
 	margin-top: 75px;
+	background-color: yellow;
 }
 #ct{
 	border: .5px solid yellow;
@@ -38,6 +40,7 @@ button{
 	width: 200px;
 	margin-left: 425px;
 	margin-top: 50px;
+	background-color: yellow;
 }
 #startNumber{
 	border: .5px solid yellow;
@@ -46,4 +49,5 @@ button{
 	width: 185px;
 	margin-left: 425px;
 	margin-top: 40px;
+	background-color: yellow;
 }
